<resources>
    <string name="app_name">BPKPD User</string>
    <string name="try_again">Silahkan Coba Lagi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_title">Registrasi Akun</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="name">Nama Pengguna</string>
    <string name="register_button">Buat Akun Baru</string>
    <string name="address">Alamat</string>
    <string name="phone">No. HP</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="login">Login</string>
    <string name="login_button">Login</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="register">Registrasi</string>
    <string name="login_title">Login Akun</string>
    <string name="otp_title">Kode Konfirmasi</string>
    <string name="submit_otp">Konfirmasi</string>
    <string name="otp_description">Kode konfirmasi dikirim ke email dan nomer WA Anda.\nPendaftaran dibatalkan otomatis selama 20 menit jika tidak melakukan konfirmasi.</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="forgot_password_title">Lupa Password</string>
    <string name="send_reset_code">Kirim</string>
    <string name="change_password_title">Ganti Password</string>
    <string name="password_confirm">Konfirmasi Password</string>
    <string name="bottom_nav_home">Beranda</string>
    <string name="bottom_nav_scan_qr">Scan QR Code</string>
    <string name="bottom_nav_settings">Pengaturan</string>
    <string name="change_photo">ganti foto</string>
    <string name="btn_save">Update Profile</string>
    <string name="logout">Logout</string>
</resources>