<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorSecondaryContainer"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/img_profile"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/ic_profile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/btn_change_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/change_photo"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textSize="18sp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_change_img">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:boxStrokeColor="?attr/colorPrimary"
                            app:boxStrokeWidth="2dp"
                            app:endIconMode="clear_text">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tv_value_name_edit"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/name"
                                android:inputType="text" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:boxStrokeColor="?attr/colorPrimary"
                            app:boxStrokeWidth="2dp"
                            app:endIconMode="clear_text">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tv_value_address_edit"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/address"
                                android:inputType="textPostalAddress" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:boxStrokeColor="?attr/colorPrimary"
                            app:boxStrokeWidth="2dp"
                            app:endIconMode="clear_text">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tv_value_phone_edit"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/phone"
                                android:inputType="phone" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_save"
                            style="@style/Widget.Material3.Button.ElevatedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:backgroundTint="?attr/colorPrimary"
                            android:padding="16dp"
                            android:text="@string/btn_save"
                            android:textColor="?attr/colorOnPrimary"
                            app:rippleColor="?attr/colorSecondary" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="?attr/colorError"
                android:padding="16dp"
                android:text="@string/logout"
                android:textColor="?attr/colorOnError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_logout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>