<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.OtpFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="?attr/colorSecondaryContainer"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="350dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/otp_title"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif"
                android:text="@string/otp_description"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="24dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:boxStrokeColor="?attr/colorPrimary"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otp1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="0123456789"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textSize="34sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:boxStrokeColor="?attr/colorPrimary"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otp2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="0123456789"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textSize="34sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:boxStrokeColor="?attr/colorPrimary"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otp3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="0123456789"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textSize="34sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:boxStrokeColor="?attr/colorPrimary"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otp4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="0123456789"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textSize="34sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnSubmitOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_box"
                android:backgroundTint="?attr/colorPrimary"
                android:padding="16dp"
                android:text="@string/submit_otp"
                android:textColor="?attr/colorOnPrimary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>